@@ -33,6 +33,7 @@ typedef enum {
 	EVENT_AGGRO_SAY,
 	EVENT_PLAYER_PICKUP,
 	EVENT_POPUP_RESPONSE,
+	EVENT_ENVIRONMENTAL_DAMAGE,
 	EVENT_PROXIMITY_SAY,
 	EVENT_CAST,
 	EVENT_CAST_BEGIN,
